[tool.poetry]
name = "ruuvi-mqtt"
version = "0.1.0"
description = "This is a simple application that reads BLE broadcasts from Ruuvi tags and sends them to an MQTT gateway."
authors = ["Ralf Ertzinger <ralf@skytale.net>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
ruuvitag-sensor = "^1.2.0"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.790"
pylint = "^2.6.0"
flake8 = "^3.8.4"

[tool.poetry.scripts]
ruuvi-mqtt = "ruuvi_mqtt.cli:ruuvi_mqtt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
